--- a/resources/assets/sass/resumes/_sidebar.scss
+++ b/resources/assets/sass/resumes/_sidebar.scss
@@ -185,7 +185,7 @@
     height: 96%;
   }
   .left {
-    height: auto%;
+    height: auto;
   }
   .newpage-top {
     padding-top: 75px;
